fix: v-mainのz-index問題解消

--- a/src/style.css
+++ b/src/style.css
@@ -3,17 +3,17 @@ body {
   height: 100%; /*高さを100%にして描画エリアをとる*/
 }
 
-/* Top */
+/* Background */
 #particles-js {
   position: fixed; /*描画固定*/
-  z-index: -1000; /*描画を一番下に*/
+  z-index: 0; /*描画を一番下に*/
   width: 100%;
   height: 100%;
   background-color: #f3f3f3; /*背景色*/
 }
-#wrapper {
+#contents {
   position: relative; /*描画を#particles-jsよりも上にするためposition:relative;を指定*/
-  z-index: 1; /*z-indexの数字を大きくすることで描画を#particles-jsよりも上に*/
+  z-index: 10; /*z-indexの数字を大きくすることで描画を#particles-jsよりも上に*/
 }
 
 /* フォント */
@@ -61,12 +61,12 @@ body {
   padding-inline-end: 5px !important;
   line-height: 0;
 }
-.v-application__wrap {
-  min-height: 0px !important;
-}
 #top-carousel .carousel__viewport {
   min-height: 245px;
 }
 #top-carousel .carousel__pagination {
   margin: 0;
+}
+.v-footer {
+  z-index: 1 !important;
 }
